@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    Add --datadir to allow running with a different data directory
     #254, eliminate foldl/map fusion rules (which were untrue)
     Fix a few typos in the hint rules
     Upgrade to uniplate 1.3.*
